--- a/jdbc/src/main/conf/db.properties
+++ b/jdbc/src/main/conf/db.properties
@@ -15,8 +15,8 @@
 
 # Properties file that contains database connection information.
 
-db.driver=org.h2.Driver
+db.driver=com.mysql.jdbc.Driver
 # jdbc.fetchsize=20
-db.url=jdbc:h2:tcp://foo.com:9092/~/h2/ycsb
-db.user=sa
+db.url=jdbc:mysql://127.0.0.1:3306/ycsb
+db.user=root
 db.passwd=
